# libium

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: add.rs  check.rs  file_picker.rs  iter_ext.rs  lib.rs  misc.rs  mutex_ext.rs  scan.rs  upgrade.rs  version_ext.rs
src/add/: curseforge.rs  github.rs  mod.rs  modrinth.rs
src/config/: filters.rs  mod.rs  structs.rs
src/launchermeta/: mod.rs  structs.rs
src/modpack/: add.rs  mod.rs
src/modpack/curseforge/: mod.rs  structs.rs
src/modpack/modrinth/: mod.rs  structs.rs
src/upgrade/: check.rs  mod.rs  mod_downloadable.rs  modpack_downloadable.rs
static/: gdl-logo.txt  library-layout-compact.txt  library-layout.txt
