[package]
name = "libium"
version = "1.28.0"
edition = "2021"
authors = [
    "Ilesh Thiada (theRookieCoder) <ileshkt@gmail.com>",
    "Daniel Hauck (SolidTux)",
]
description = "Multi-source backend for managing Minecraft mods and modpacks from Modrinth, CurseForge, and Github Releases"
repository = "https://github.com/gorilla-devs/libium"
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "minecraft",
    "mod-manager",
    "modrinth",
    "curseforge",
    "github-releases",
]

[features]
gui = ["rfd"]

[dependencies]
rfd = { version = "0.14", default-features = false, optional = true, features = [
    "xdg-portal",
    "tokio",
] }
octocrab = { version = "0.38", default-features = false, features = ["rustls"] }
tokio = { version = "1.38", default-features = false, features = ["fs"] }
# Locked due to possibility of breaking changes
async_zip = { version = "=0.0.17", default-features = false, features = [
    "deflate",
    "tokio",
    "tokio-fs",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
async-recursion = "1.0"
serde_json = "1.0"
tokio-util = "0.7"
dialoguer = "0.11"
once_cell = "1.19"
thiserror = "1.0"
ferinth = "2.11"
furse = "1.5"
sha1 = "0.10"
home = "0.5"
