[package]
name = "libium"
version = "1.32.0"
edition = "2021"
authors = [
    "Ilesh Thiada (theRookieCoder) <ileshkt@gmail.com>",
    "Daniel Hauck (SolidTux)",
]
description = "Multi-source backend for managing Minecraft mods and modpacks from Modrinth, CurseForge, and Github Releases"
repository = "https://github.com/gorilla-devs/libium"
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "minecraft",
    "mod-manager",
    "modrinth",
    "curseforge",
    "github-releases",
]

[dependencies]
octocrab = { version = "=0.40", default-features = false, features = [
    "default-client",
    "rustls",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
derive_more = { version = "1.0", features = ["display"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
zip-extensions = "0.8"
futures-util = "0.3"
serde_json = "1.0"
thiserror = "1.0"
ferinth = "2.11"
regex = "1.11"
furse = "1.5"
sha1 = "0.10"
home = "0.5"
zip = "2.2"
